--- a/Shopping/Shopping.csproj
+++ b/Shopping/Shopping.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
     <AspNetCoreModuleName>AspNetCoreModule</AspNetCoreModuleName>
+    <StartupObject>Shopping.Program</StartupObject>
   </PropertyGroup>
 
 
